[ADD]增加更改用户信息的接口
